[package]
name = "bitcoin_address_miner"
version = "0.1.2"
edition = "2021"
authors = ["Simone Ragonesi <simone.ragonesi@protonmail.com>"]
description = "A utility for generating and mining Bitcoin addresses in Rust."
license = "MIT"
repository = "https://github.com/r3drun3/bitcoin-address-miner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { git = "https://github.com/QEDProtocol/rust-dogecoin", rev = "8eedd4dd8113f4f2af1e8fbdc5bf53ffeb3e19cf", features = [ "serde", "rand-std" ] }
tokio = { version = "1", features = ["full"] }
hex = "0.4.2"
